--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "app/Http/Helpers/LogHelper.php"
         ]
     },
     "autoload-dev": {
