--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
-        "laravelcollective/html": "^6.1"
+        "laravelcollective/html": "^6.1",
+        "spatie/laravel-model-status": "^1.10"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
