--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
+        "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
-        "laravelcollective/html": "^6.1",
-        "spatie/laravel-model-status": "^1.10"
+        "laravelcollective/html": "^6.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
